# ourworld-quant

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
deploy/: Caddyfile  README.md  check-public.sh  cloudflare-tunnel.md  docker-compose.yml  install-launchd.sh  nginx.conf  public.env.example  run-public-app.sh  start-site.command  sync-market-public.sh  uninstall-launchd.sh
deploy/launchd/: com.ourworlds.quant.app.plist  com.ourworlds.quant.market-sync.plist
docs/: index-classic.html  index.html
plan/: A股量化_个人准备计划.md
src/: metrics_glossary.py
src/app/: README.md  __init__.py  data_bridge.py  db.py  doctor.py  email_config.py  learning.py  render_helpers.py  server.py  services.py
src/app/ai/: __init__.py  client.py  context.py  crypto.py  guardrail.py  service.py
src/app/static/: app.js
src/backtest/: README.md  __init__.py  costs.py  engine.py  metrics.py  run.py
src/backtest/strategies/: __init__.py  cross_sectional.py
src/data/: README.md  __init__.py  clean.py  cli.py  config.py  pipeline.py  requirements.txt  storage.py  utils.py
src/data/sources/: __init__.py  akshare_source.py  baostock_source.py  base.py  tushare_source.py
src/factors/: README.md  __init__.py  evaluate.py  factors.py  preprocess.py  run.py
src/research/: README.md  __init__.py  multifactor.py  real_data_report.py
tests/: test_ai_client.py  test_ai_guardrail.py  test_ai_service.py  test_app_services.py  test_backtest_smoke.py  test_data_bridge.py  test_data_clean.py  test_data_pipeline.py  test_deploy_artifacts.py  test_deploy_scripts.py  test_doctor.py  test_real_data_report.py  test_research_pipeline.py  test_server_concurrency.py  test_server_routes.py
